--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ h1 {
     width: 100%;
     margin-top: 10px;
 }
+
+#history > * {
+    margin-top: 10px;
+    height: 35px;
+    border-radius: 4px;
+}
