--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ h1 {
     font-weight: bolder;
 }
 
+h3 {
+    font-size: medium;
+    color: aliceblue;
+    font-weight: bolder;
+}
+
 #form-heading {
     /* font-size: large; */
     padding-top: 20px;
@@ -34,4 +40,22 @@ h1 {
     margin-top: 10px;
     height: 35px;
     border-radius: 4px;
+}
+
+#today {
+    border: black;
+    border-style: solid;
+    border-width: 1px;
+    padding: 20px;
+}
+
+.dayCard {
+    background-image: linear-gradient(0.25turn, #2B35AF, #4361EE);
+    margin: 10px;
+    padding: 20px 20px 10px 20px;
+}
+
+.dayCard p {
+    color: aliceblue;
+    font-size: small;
 }
