--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h3 {
 
 #today {
     border: black;
-    border-style: solid;
+    /* border-style: solid; */
     border-width: 1px;
     padding: 20px;
 }
